# vrchat-osc-scripts

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: make-release.yml
docs/: configuration.md  installation-executable.md  installation-python.md  installation-unity.md
tests/handlers/: test_heart_rate_state_change.py
vrchat_osc_scripts/: config.py  launcher.py  main.py
vrchat_osc_scripts/clients/: pishock.py  receiver.py  sender.py
vrchat_osc_scripts/handlers/: base.py  heart_rate_chatbox_update_v2.py  heart_rate_chatbox_update_v3.py  shock_on_tail_grab.py
vrchat_osc_scripts/tools/: logger.py
